# refraction-hs

./: .gitignore  .travis.yml  README.md  README.md.bak  demo-fairexchange.hs  demo-opreturn.js  refraction.cabal  stack.yaml  tmp.hs
app/: .template.yml  Main.hs
docs/: why.md
src/: Blockchain.hs  Discover.hs  FairExchange.hs  Generator.hs  Lib.hs  PeerToPeer.hs  Refraction.hs  Tor.hs
src/Network/: Refraction.hs
src/Network/Refraction/: BitcoinUtils.hs  Blockchain.hs  Discover.hs  FairExchange.hs  Generator.hs  PeerToPeer.hs  RoundManager.hs  Tor.hs
src/Network/Refraction/Discover/: Advertiser.hs  Respondent.hs  Types.hs
src/Network/Refraction/FairExchange/: Alice.hs  Bob.hs  Types.hs
test/: Spec.hs
tests/: Main.hs  Spec.hs
tests/Network/: RefractionSpec.hs
tests/Network/Refraction/: GeneratorSpec.hs
