name:                refraction
version:             0.1.0.0
synopsis:            Decentralized Bitcoin privacy tool
description:         Please see README.md
homepage:            http://github.com/hudon/refraction-hs#readme
license:             GPLv3
license-file:        LICENSE
author:              James Hudon
maintainer:          jameshudon@gmail.com
copyright:           2016 James Hudon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blockchain
                     , Discover
                     , FairExchange
                     , Generator
                     , PeerToPeer
                     , Refraction
                     , Tor
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base32string
                     , bytestring
                     , cereal
                     , haskoin-core
                     , http-client
                     , lens
                     , network
                     , network-anonymous-tor
                     , random
                     , socks
                     , text
                     , yaml
                     , wreq
  default-language:    Haskell2010

executable refraction-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , refraction
                     , yaml
                     , text
                     , directory
  default-language:    Haskell2010

test-suite refraction-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , refraction
                     , tasty
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hudon/refraction-hs
