name:                refraction
version:             0.1.0.0
synopsis:            Decentralized Bitcoin privacy tool
description:         Please see README.md
homepage:            http://github.com/hudon/refraction-hs#readme
license:             GPLv3
license-file:        LICENSE
author:              James Hudon
maintainer:          jameshudon@gmail.com
copyright:           2016 James Hudon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Refraction
                     , Network.Refraction.Blockchain
                     , Network.Refraction.Discover
                     , Network.Refraction.Discover.Advertiser
                     , Network.Refraction.Discover.Respondent
                     , Network.Refraction.Discover.Types
                     , Network.Refraction.FairExchange
                     , Network.Refraction.Generator
                     , Network.Refraction.PeerToPeer
                     , Network.Refraction.Tor
-- TODO: restrict these deps to safer ranges
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base16-bytestring
                     , base32string
                     , bytestring
                     , cereal
                     , crypto-api
                     , DRBG
                     , haskoin-core
                     , http-client
                     , lens
                     , lens-aeson
                     , monadcryptorandom
                     , network
                     , network-anonymous-tor
                     , random
                     , socks
                     , text
                     , yaml
                     , wreq
  default-language:    Haskell2010

executable refraction-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , refraction
                     , yaml
                     , text
                     , directory
  default-language:    Haskell2010

test-suite refraction-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , refraction
                     , tasty
                     , tasty-hspec
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hudon/refraction-hs
